[package]
name = "gratefulset"
version = "0.1.0"
authors = ["Owen Diehl <ow.diehl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
rand = "0.7.3"
serde_json = "1.0.59"
kube-derive = "0.43.0"

[dependencies.reqwest]
version = "0.10.9"
features = ["blocking"]

[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dependencies.k8s-openapi]
version = "0.10.0"
features = ["v1_19"]
default-features = false
